shopizer-admin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: shopizer-admin
  name: shopizer-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: shopizer-admin
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network: "true"
        io.kompose.service: shopizer-admin
    spec:
      containers:
        - env:
            - name: APP_BASE_URL
              value: http://localhost:9090/api
          image: shopizerecomm/shopizer-admin:latest
          name: shopizer-admin
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
