shopizer-shop-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: shopizer-shop
  name: shopizer-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: shopizer-shop
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network: "true"
        io.kompose.service: shopizer-shop
    spec:
      containers:
        - env:
            - name: APP_BASE_URL
              value: http://shopizer_api_ip_address:8080
            - name: APP_MERCHANT
              value: DEFAULT
          image: shopizerecomm/shopizer-shop-reactjs:latest
          name: shopizer-shop
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
