node-exporter.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-exporter
  labels:
    app: node-exporter
spec:
  loadBalancerIP: node_exportor_ip_address
  type: LoadBalancer
  ports:
    - name: http
      port: 9100
      targetPort: 9100
  selector:
    app: node-exporter
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-exporter
spec:
  selector:
    matchLabels:
      app: node-exporter
  replicas: 1
  template:
    metadata:
      labels:
        app: node-exporter
    spec:
      containers:
        - name: node-exporter
          image: prom/node-exporter:v1.2.2
          ports:
            - containerPort: 9100
          args:
            - "--path.procfs=/host/proc"
            - "--path.sysfs=/host/sys"
            - "--collector.filesystem.ignored-mount-points=^/(sys|proc|dev|host|etc)($|/)"
          volumeMounts:
            - name: proc
              mountPath: /host/proc
              readOnly: true
            - name: sys
              mountPath: /host/sys
              readOnly: true
      volumes:
        - name: proc
          hostPath:
            path: /proc
        - name: sys
          hostPath:
            path: /sys
