shopizer-admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: shopizer-admin
  name: shopizer-admin
spec:
  loadBalancerIP: shopizer_admin_ip_address
  type: LoadBalancer
  ports:
    - name: "4200"
      port: 4200
      targetPort: 80
  selector:
    io.kompose.service: shopizer-admin
